sync: java-upgrade plugin update from devdiv-azure-service-dmitryr/azure-java-migration-copilot-vscode-extension@6f45f98 (#10)
Source commit: 6f45f98d4e4608eb644a6ff2488ada21b2c58287

Source branch: main

Triggered by: haital_microsoft

Workflow: https://github.com/devdiv-azure-service-dmitryr/azure-java-migration-copilot-vscode-extension/actions/runs/26202949543

Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>